<resources>
    <string name="app_name">i-express</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_parcel">Parcel</string>
    <string name="title_finance">Finance</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>